syntax = "proto2";

// https://github.com/whitechi73/OpenShamrock/blob/59d762eecf6627bd5480cd308e2f6171118a3bc0/protobuf/src/main/java/protobuf/oidb/cmd0x11c5/NtV2RichMediaReq.kt#L11
package trpc.rich_media_ntv2;

import "msg/ntv2_rich_media.proto";

// OidbSvcTrpcTcp.0x9067_100
// OidbSvcTrpcTcp.0x9067_202

message NtV2RichMediaReq {
  required MultiMediaReqHead head = 1;
  optional UploadReq upload = 2;
  optional DownloadRkeyReq download = 4;

}

message UploadReq {
  repeated UploadInfo uploadInfo = 1;
  optional bool tryFastUploadCompleted = 2;
  optional bool srvSendMsg = 3;
  optional uint32 clientRandomId = 4 [default = 0];
  optional uint32 compatQMsgSceneType = 5;
  optional msg.ExtBizInfo extBizInfo = 6;
  optional uint32 clientSeq = 7;
  optional bool noNeedCompatMsg = 8;
}

message UploadInfo {
  required FileInfo fileInfo = 1;
  required uint32 subFileType = 2;
}

message FileInfo {
  optional uint64 fileSize = 1;
  optional string md5 = 2;
  optional string sha1 = 3;
  optional string name = 4;
  optional FileType fileType = 5;
  optional uint32 width = 6;
  optional uint32 height = 7;
  optional uint32 time = 8;
  optional uint32 original = 9;
}

message FileType {
  optional uint32 fileType = 1 [default = 0];
  optional uint32 picFormat = 2 [default = 0];
  optional uint32 videoFormat = 3;
  optional uint32 voiceFormat = 4;
}

message DownloadRkeyReq {
  repeated uint32 types = 1;
  optional uint32 downloadType = 2;
}

message MultiMediaReqHead {
  required CommonHead head = 1;
  required SceneInfo scene = 2;
  required ClientMeta clientMeta = 3;
}

message ClientMeta {
  required uint32 agentType = 1;
}

message CommonHead {
  required uint32 req_id = 1;
  required uint32 cmd = 2;
  optional string msg = 3;
}

message SceneInfo {
  required uint32 requestType = 101;
  required uint32 businessType = 102;
  optional uint32 appType = 103;
  optional uint32 sceneType = 200;
  optional C2CUserInfo c2c = 201;
  optional GroupUserInfo grp = 202;
  optional ChannelUserInfo channel = 203;
  optional bytes byteArr = 205;
}

message C2CUserInfo {
  required uint32 accountType = 1;
  required string uid = 2;
  optional bytes byteArr = 3;
}

message GroupUserInfo {
  required uint32 uin = 1;
}

message ChannelUserInfo {
  required uint32 guildId = 1;
  required uint32 channelId = 2;
  required uint32 channelType = 3;
}

// https://github.com/whitechi73/OpenShamrock/blob/59d762e/protobuf/src/main/java/protobuf/oidb/cmd0x11c5/NtV2RichMediaRsp.kt
message NtV2RichMediaRsp {
  required RspHead head = 1;
  optional UploadRsp upload = 2;
  //optional DownloadRsp download = 3;
  optional DownloadRkeyRsp downloadRkeyRsp = 4;
  //optional DeleteRsp delete = 5;
  //optional UploadCompletedRsp uploadCompleted = 6;
  //optional MsgInfoAuthRsp msgInfoAuth = 7;
  //optional UploadKeyRenewalRsp uploadKeyRenew = 8;
  //optional DownloadSafeRsp downloadSafe = 9;
  optional bytes extension = 99;
}

message RspHead {
  required CommonHead commonHead = 1;
  optional uint32 retCode = 2;
  required string msg = 3;
}

message DownloadRkeyRsp {
  repeated RKeyInfo rkeys = 1;
}

message RKeyInfo {
  required string rkey = 1;
  required uint64 rkeyTtlSec = 2;
  optional uint32 storeId = 3;
  optional uint32 rkeyCreateTime = 4;
  optional uint32 type = 5;
}

message UploadRsp {
  optional string ukey = 1;
  optional uint64 ukeyTtlSec = 2;
  repeated Ipv4 ipv4 = 3;
  repeated Ipv6 ipv6 = 4;
  optional uint64 msgSeq = 5;
  optional msg.MsgInfo msgInfo = 6;
  repeated RichmediaStorageTransInfo ext = 7;
  optional bytes compatQMsg = 8;
  repeated SubFileInfo subFileInfos = 10;
}

message Ipv4 {
  optional int32 outIp = 1;
  optional int32 outPort = 2;
  optional uint32 inIp = 3;
  optional int32 inPort = 4;
  optional int32 ipType = 5;
}

message Ipv6 {
  optional bytes outIp = 1;
  optional int32 outPort = 2;
  optional bytes inIp = 3;
  optional int32 inPort = 4;
  optional int32 ipType = 5;
}

message SubFileInfo {
  optional uint32 subType = 1;
  optional string ukey = 2;
  optional uint64 ukeyTTLSec = 3;
  repeated Ipv4 ipv4 = 4;
  repeated Ipv6 ipv6 = 5;
}

message RichmediaStorageTransInfo {
  optional uint32 subType = 1;
  optional uint32 extType = 2;
  optional bytes extValue = 3;
}


